# tredecuple-cartpole

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.working/n13/: n13_b2_affine_defect_tracker.py
.working/n13-retrospective/: b2-proof-verification-result.json  b2-proof-verification.md  b2-proof-verify.py
.working/n13/n13-b2-affine-defect-tracker-20260713T053956542276Z-278512-00/: 00-source-manifest.json  01-affine-controller.json  02-live-tracker-extraction.json  03-static-capture-scan.json  03-static-capture-scan.npz  04-fresh-composed-proof.json  05-b2-classification.json  05-b2-classification.npz
.working/n13/n13-live-parent-bridge-20260713T031033509051Z-222644-00/: arm-a.npz
evidence/: copy-manifest.json  problem-definition.md
runs/r2/: nom_n13_4ms_n13_base60r3.npz
scripts/: fast_pieces.py  ilqg.py  robust_gains.py
src/cartpole_race/: __init__.py  dynamics.py  env_spec.py  funnels.py  lqr.py  tvlqr.py
src/n13_proof/: __init__.py  capsule.py  demo.py  verify.py
tests/: test_capsule_contract.py  test_n13_authority.py
