[project]
name = "n13-one-run-proof"
version = "0.1.0"
description = "Public deterministic one-run proof capsule for the N13 cart-pole result."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "casadi==3.7.2",
    "mpmath==1.3.0",
    "numpy==2.4.6",
    "pillow==12.2.0",
    "pydantic==2.13.4",
    "PyYAML==6.0.3",
    "scipy==1.17.1",
]

[project.scripts]
n13-demo = "n13_proof.demo:main"
n13-proof-verify = "n13_proof.verify:main"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cartpole_race", "src/n13_proof"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".working", "scripts", "src/cartpole_race"]
